src/test/deca/context/valid/created/return-convfloat.deca
class A{
	float fonction(){
		int a = 3;
		return a;
	}
}