src/test/deca/context/invalid/created/retour-invalide.deca
class A{
	
	int fonction(){
		
		float a = 1.2;
		return a;
		
	}
	
}